<resources>
    <string name="app_name">Bagex</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register">Don’t have an Account?</string>
    <string name="register">Register</string>
    <string name="err_please_enter_email">Please enter Email ID</string>
    <string name="err_please_enter_password">Please enter password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_delivery_agent">DeliveryAgentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="pending">Pending Orders</string>
    <string name="booked">Booked Orders</string>
    <string name="logout">Logout</string>
    <string name="assigned">Assigned Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booked_orders">Booked Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="assigned_orders">Assigned Orders</string>
    <string name="new_order">New Order</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="new_orders">New Orders</string>
    <string name="in_progress_orders">In Progress Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="pickup_new_orders">Pickup New Orders</string>
    <string name="pickup_in_progress">Pickup In Progress</string>
    <string name="pickup_completed">Pickup Completed</string>
    <string name="bulk_operator">Bulk Operator</string>
    <string name="arrival">Arrival</string>
    <string name="Departure">Departure</string>
    <string name="tService">Service Type</string>
    <string name="tName">tName</string>
    <string name="tEmail">tEmail</string>
    <string name="bagsNo">No Of Bags</string>
    <string name="flightTime">Flight Time</string>
    <string name="tpupcity">Pickup City</string>
</resources>
