<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/rel1"
            android:layout_margin="@dimen/dimen_10"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.example.bagex.Utils.CommonTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/category"
                    android:text="@string/welcome_to"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">

                </com.example.bagex.Utils.CommonTextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bagex_login">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bitnew"
                    android:layout_alignParentRight="true"
                    android:id="@+id/carryicon"
                    android:layout_height="wrap_content">
                </ImageView>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:visibility="gone"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:scaleType="fitXY" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="20dp">

            <com.example.bagex.Utils.CommonEditText
                android:id="@+id/usenameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/email"
                android:maxLength="25"
                android:singleLine="true"
                app:met_floatingLabel="highlight" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameLyt"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.example.bagex.Utils.CommonEditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorPrimary"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
                0123456789!@#$%^*(),./-+_;:'? "
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                app:met_floatingLabel="highlight" />

        </android.support.design.widget.TextInputLayout>

        <com.example.bagex.Utils.CommonButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/passwordLyt"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <com.example.bagex.Utils.CommonTextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/loginBtn"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary" />



    </RelativeLayout>

    <com.example.bagex.Utils.CommonTextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
